# hyperborea

./: .gitignore  Cargo.toml  README.md  paper.md  shell.nix
hyperborea/: Cargo.toml  README.md
hyperborea-cli/: Cargo.toml
hyperborea-cli/src/: main.rs
hyperborea-server/: Cargo.toml  README.md
hyperborea/src/: lib.rs  node.rs
hyperborea/src/controller/: indexing.rs  mod.rs  params.rs  requests.rs  standard.rs  test.rs
hyperborea/src/controller/tests/: auth.rs  connect.rs  mod.rs  nodes_ring.rs
hyperborea/src/node/: address.rs  mod.rs  standard.rs  test.rs
hyperborea/src/node/ext/: mod.rs  shared_secret_ext.rs  verify_ext.rs
hyperborea/src/node/owned/: mod.rs  standard.rs  test.rs
hyperborea/src/node/owned/ext/: mod.rs  shared_secret_ext.rs  sign_ext.rs  verify_ext.rs
hyperborea/src/packet/: mod.rs  standards.rs  test.rs
hyperborealib/: Cargo.toml  README.md
hyperborealib/src/: bucket.rs  client.rs  crypto.rs  lib.rs  time.rs
hyperborealib/src/crypto/: mod.rs  utils.rs
hyperborealib/src/crypto/asymmetric/: mod.rs  public_key.rs  secret_key.rs
hyperborealib/src/crypto/compression/: brotli.rs  deflate.rs  mod.rs
hyperborealib/src/crypto/encoding/: base64.rs  mod.rs
hyperborealib/src/crypto/encryption/: aes256_gcm.rs  chacha20_poly1305.rs  mod.rs
hyperborealib/src/drivers/: mod.rs
hyperborealib/src/drivers/client/: mod.rs
hyperborealib/src/drivers/server/: mod.rs  params.rs  server.rs
hyperborealib/src/drivers/server/messages_inbox/: basic_inbox.rs  mod.rs  stored_queue.rs
hyperborealib/src/drivers/server/router/: global_table.rs  mod.rs
hyperborealib/src/drivers/server/traversal/: bfs_recursion.rs  mod.rs
hyperborealib/src/http/: client.rs  mod.rs  server.rs
hyperborealib/src/rest_api/: mod.rs  request.rs  response.rs  status.rs
hyperborealib/src/rest_api/clients/: mod.rs
hyperborealib/src/rest_api/connect/: certificate.rs  client_info.rs  mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/info/: mod.rs
hyperborealib/src/rest_api/lookup/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/middleware/: client.rs  mod.rs  server.rs
hyperborealib/src/rest_api/poll/: message_info.rs  mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/: mod.rs
hyperborealib/src/rest_api/requests/announce/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/clients/: mod.rs  response.rs
hyperborealib/src/rest_api/requests/connect/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/info/: mod.rs  response.rs
hyperborealib/src/rest_api/requests/lookup/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/poll/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/send/: mod.rs  request.rs  response.rs
hyperborealib/src/rest_api/requests/servers/: mod.rs  response.rs
hyperborealib/src/rest_api/send/: message.rs  message_encoding.rs  mod.rs  request.rs  response.rs  sender.rs  text_compression.rs  text_encoding.rs  text_encryption.rs
hyperborealib/src/rest_api/servers/: mod.rs
hyperborealib/src/rest_api/types/: client.rs  client_info.rs  client_type.rs  connection_certificate.rs  connection_token.rs  message.rs  message_encoding.rs  message_info.rs  mod.rs  sender.rs  server.rs
hyperborealib/src/server/: mod.rs  params.rs  server.rs
hyperborealib/src/server/messages_inbox/: basic_inbox.rs  mod.rs
hyperborealib/src/server/messages_queue/: mod.rs
hyperborealib/src/server/router/: global_table.rs  mod.rs
hyperborealib/src/server/traversal/: bfs_recursion.rs  mod.rs
hyperbox/: Cargo.toml  README.md
hyperbox/src/: args.rs  main.rs  shell.rs
hyperbox/src/client/: clients.rs  info.rs  lookup.rs  mod.rs  servers.rs
hyperchat/: Cargo.toml  README.md
hyperchat/src/: chat_server.rs  chat_ui.rs  client.rs  main.rs  params.rs  server.rs
hyperchat/src/api/client/: join.rs  listen.rs  mod.rs  request.rs
hyperchat/src/api/server/: join.rs  mod.rs  process.rs
hyperchat/src/client/: chat_hoster.rs  chat_member.rs  mod.rs
hyperchat/src/client/api/: message.rs  mod.rs  request.rs  response.rs
hyperelm/: Cargo.toml  README.md
hyperelm/src/: lib.rs
hyperelm/src/client/: app.rs  endpoint.rs  macros.rs  mod.rs  params.rs
hyperelm/src/server/: app.rs  basic_app.rs  mod.rs  params.rs
