[package]
name = "hyperborea"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

# node: addresses
data-encoding = { version = "2.3.3", optional = true }

# node-v1: cryptography
k256 = { version = "0.13.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"

[features]
node = ["dep:data-encoding"]
node-v1 = ["node", "dep:k256"]
node-all = ["node", "node-v1"]

default = ["node", "node-all"]
