[package]
name = "hyperchat"
version = "0.1.0"
description = "Hyperborea example chat application"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/hyperborea/hyperchat"
repository = "https://github.com/krypt0nn/hyperborea"
license = "GPL-3.0"
edition = "2021"

[dependencies]
hyperelm = { path = "../hyperelm" }

tokio = { version = "1.38", features = ["full"] }

ratatui = "0.27.0"
tui-textarea = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
